TIL how private works in Go :)
